feat: updated and moved httpd.conf file
- Update httpd.conf

--- a/src/httpd.conf
+++ b/src/httpd.conf
@@ -1,44 +1,23 @@
 ServerRoot "/usr/local/apache2"
 Listen 80
 
-# Gerekli temel modüller
+LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule dir_module modules/mod_dir.so
+LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule mime_module modules/mod_mime.so
-LoadModule rewrite_module modules/mod_rewrite.so
-LoadModule headers_module modules/mod_headers.so
+LoadModule log_config_module modules/mod_log_config.so
+LoadModule unixd_module modules/mod_unixd.so
 
-# Temel güvenlik başlıkları
-ServerTokens Prod
-ServerSignature Off
-Header always set X-Content-Type-Options "nosniff"
-Header always set X-XSS-Protection "1; mode=block"
-Header always set X-Frame-Options "SAMEORIGIN"
+ServerAdmin webmaster@localhost
+ServerName localhost
+DocumentRoot "/usr/local/apache2/htdocs"
 
-# MIME türleri ve karakter seti
-AddDefaultCharset UTF-8
-DefaultType application/octet-stream
-
-DocumentRoot /var/www/html
-
-<Directory /var/www/html>
-    Options -Indexes +FollowSymLinks
+<Directory "/usr/local/apache2/htdocs">
+    Options Indexes FollowSymLinks
     AllowOverride None
     Require all granted
-    
-    # Güvenlik ayarları
-    <FilesMatch "^\.">
-        Require all denied
-    </FilesMatch>
-    
-    # PHP dosyalarını engelle (eğer PHP kullanmıyorsanız)
 </Directory>
 
-# Hata sayfaları
-ErrorDocument 404 /pages/404.html
-ErrorDocument 403 /pages/403.html
-ErrorDocument 500 /pages/500.html
-
-# Loglar
-ErrorLog /proc/self/fd/2
-CustomLog /proc/self/fd/1 combined
+ErrorLog logs/error.log
 LogLevel warn
+CustomLog logs/access.log combined
