feat: Add case processor script for HTML to JSON conversion
- Add script to convert HTML case files to JSON format

- Update index_cases.json with test case information

- Add proper error handling and logging

- Use directory name as category for test cases

- Remove processed HTML files after successful conversion

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,18 @@
 version: "3.8"
 
 services:
-  flask-app:
+  app:
     build: .
+    container_name: xsstrange-app
     ports:
       - "80:5000"
     volumes:
-      - ./templates:/app/templates
-      - ./src:/app/src
-    environment:
-      FLASK_ENV: development
+      - .:/app
+    networks:
+      - app-network
+    restart: unless-stopped
+
+networks:
+  app-network:
+    driver: bridge
+    name: xsstrange-network
